// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/patients DELETE / /:patientId - delete patient 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/patients GET / / - get all patients under a clinic 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentPreference": "both",
        "email": "testpatient@test.com",
        "firstName": "Ronald",
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "lastName": "Mcdonald",
        "mobilePhoneNumber": "+17789999999",
        "pmsId": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
      },
    },
  },
  "result": Array [
    "10518e11-b9d2-4d74-9887-29eaae7b5938",
  ],
}
`;

exports[`/api/patients GET / /:patientId - retrieve a patient 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentPreference": "both",
        "email": "testpatient@test.com",
        "firstName": "Ronald",
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "lastName": "Mcdonald",
        "mobilePhoneNumber": "+17789999999",
        "pmsId": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
      },
    },
  },
  "result": "10518e11-b9d2-4d74-9887-29eaae7b5938",
}
`;

exports[`/api/patients GET / /:patientId/stats - retrieve patient appointments 1`] = `
Object {
  "allApps": 1,
  "entities": Object {},
  "lastAppointment": "2017-07-21T00:14:30.932Z",
  "monthsApp": 1,
}
`;

exports[`/api/patients GET / /search - search patients - no results 1`] = `
Object {
  "entities": Object {
    "chats": Object {},
    "patients": Object {},
    "textMessages": Object {},
  },
  "result": Array [],
}
`;

exports[`/api/patients GET / /search - search patients - result found 1`] = `
Object {
  "entities": Object {
    "chats": Object {},
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentPreference": "both",
        "appointments": Array [],
        "email": "testpatient@test.com",
        "firstName": "Ronald",
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "lastName": "Mcdonald",
        "mobilePhoneNumber": "+17789999999",
        "pmsId": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
      },
    },
    "textMessages": Object {},
  },
  "result": Array [
    "10518e11-b9d2-4d74-9887-29eaae7b5938",
  ],
}
`;

exports[`/api/patients GET / /stats - retrieve patients appointments 1`] = `
Object {
  "ageData": Array [
    100,
    0,
    0,
    0,
    0,
    0,
  ],
  "entities": Object {},
  "female": 1,
  "male": 0,
}
`;

exports[`/api/patients GET / /suggestions - no result found 1`] = `
Object {
  "entities": Object {},
  "result": Array [],
}
`;

exports[`/api/patients GET / /suggestions - result found 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentPreference": "both",
        "email": "testpatient@test.com",
        "firstName": "Ronald",
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "lastName": "Mcdonald",
        "mobilePhoneNumber": "+17789999999",
        "pmsId": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
      },
    },
  },
  "result": Array [
    "10518e11-b9d2-4d74-9887-29eaae7b5938",
  ],
}
`;

exports[`/api/patients POST / / - create a patient 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentPreference": "both",
        "email": "testpatient@test.com",
        "firstName": "Ronald",
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "lastName": "Mcdonald",
        "mobilePhoneNumber": "+17789999999",
        "pmsId": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
      },
    },
  },
  "result": "10518e11-b9d2-4d74-9887-29eaae7b5938",
}
`;

exports[`/api/patients POST / /emailCheck - result found 1`] = `
Object {
  "entities": Object {},
  "exists": true,
}
`;

exports[`/api/patients POST / /emailCheck - result not found 1`] = `
Object {
  "entities": Object {},
  "exists": false,
}
`;

exports[`/api/patients POST / /phoneNumberCheck - result found 1`] = `
Object {
  "entities": Object {},
  "exists": true,
}
`;

exports[`/api/patients POST / /phoneNumberCheck - result not found 1`] = `
Object {
  "entities": Object {},
  "exists": false,
}
`;

exports[`/api/patients PUT / /:patientId - update patient 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentPreference": "both",
        "email": "testpatient@test.com",
        "firstName": "Wendy",
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "lastName": "Mcdonald",
        "mobilePhoneNumber": "+17789999999",
        "pmsId": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
      },
    },
  },
  "result": "10518e11-b9d2-4d74-9887-29eaae7b5938",
}
`;
